[workspace]
members = ["programs/*"]
resolver = "2"

# [profile.release]
# overflow-checks = true
# lto = "fat"
# codegen-units = 1
# [profile.release.build-override]
# opt-level = 3
# incremental = false
# codegen-units = 1

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 16

[profile.release.build-override]
opt-level = 2
incremental = true
codegen-units = 16
